--- a/.gitignore
+++ b/.gitignore
@@ -69,8 +69,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.test
+#.env
+#.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -108,6 +108,7 @@ dist
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
 
 # testing
 /coverage
